force-app/main/default/objects/Master_Contract_ErrorLog__c/Master_Contract_ErrorLog__c.object-meta.xml
<CustomObject>
    <label>Master Contract ErrorLog</label>
    <nameField>
        <label>Master Contract ErrorLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Contract ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>