force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Contract ErrorLogs</relationshipLabel>
    <relationshipName>Master_Contract_ErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>