force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/asso1__c.field-meta.xml
<CustomField>
    <fullName>asso1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>asso1</label>
    <referenceTo>AssociatedLocation</referenceTo>
    <relationshipLabel>Master Contract ErrorLogs (asso1)</relationshipLabel>
    <relationshipName>Master_Contract_ErrorLogs2</relationshipName>
    <type>Lookup</type>
</CustomField>