force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/asso__c.field-meta.xml
<CustomField>
    <fullName>asso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>asso</label>
    <referenceTo>AssociatedLocation</referenceTo>
    <relationshipLabel>Master Contract ErrorLogs (asso)</relationshipLabel>
    <relationshipName>Master_Contract_ErrorLogs1</relationshipName>
    <type>Lookup</type>
</CustomField>