force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/Associated_Location__c.field-meta.xml
<CustomField>
    <fullName>Associated_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Location</label>
    <referenceTo>AssociatedLocation</referenceTo>
    <relationshipLabel>Master Contract ErrorLogs</relationshipLabel>
    <relationshipName>Master_Contract_ErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>