force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>