force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/Email_Notified__c.field-meta.xml
<CustomField>
    <fullName>Email_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notified?</label>
    <type>Checkbox</type>
</CustomField>