force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/Error_Source__c.field-meta.xml
<CustomField>
    <fullName>Error_Source__c</fullName>
    <label>Error Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Batch Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>