force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/locationid__c.field-meta.xml
<CustomField>
    <fullName>locationid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>locationid</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Master Contract ErrorLogs</relationshipLabel>
    <relationshipName>Master_Contract_ErrorLogs</relationshipName>
    <type>Lookup</type>
</CustomField>