force-app/main/default/objects/Master_Contract_ErrorLog__c/fields/Source_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_ID__c</fullName>
    <label>Source Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>